JumpScript/tests/baselines/reference/exportDefaultFunctionInNamespace.errors.txt
tests/cases/compiler/exportDefaultFunctionInNamespace.jump(2,12): error TS1319: A default export can only be used in an ECMAScript-style module.
tests/cases/compiler/exportDefaultFunctionInNamespace.jump(6,12): error TS1319: A default export can only be used in an ECMAScript-style module.


==== tests/cases/compiler/exportDefaultFunctionInNamespace.jump (2 errors) ====
    namespace ns_function {
        export default function () {}
               ~~~~~~~
!!! error TS1319: A default export can only be used in an ECMAScript-style module.
    }
    
    namespace ns_async_function {
        export default async function () {}
               ~~~~~~~
!!! error TS1319: A default export can only be used in an ECMAScript-style module.
    }
    